# VladimirovsCourse

./: .gitignore  .gitmodules  README.md  test
OpenCL/: CMakeLists.txt
OpenCL/include/: bitSort.hpp
OpenCL/source/: BitSort.cl  app.cpp  main.cpp
ParaCL/: .clang-format  .gitignore  CMakeLists.txt  README.md  test  worked3.cl
ParaCL/backend/compiler/: .compiler.cpp.swp  .compiler.hpp.swp  compiler.hpp
ParaCL/backend/interpreter/: .interpreter.cpp.swp  .interpreter.hpp.swp  interpreter.cpp  interpreter.hpp
ParaCL/common/: errorDetector.hpp  locator.hpp  nAryTree.hpp
ParaCL/common/InputHandler/: InputHandler.hpp
ParaCL/examples/: factorial.dbl  fibonacci.dbl  recursive_factorial.cl  test  test.c
ParaCL/examples/FrolovCode/: worked1.dbl
ParaCL/examples/IvanovCode/: test1.txt
ParaCL/examples/funcTests/: test1.cl  test12.cl
ParaCL/examples/notWorked/: printExample.cl
ParaCL/examples/worked/: printExample.cl  worked5.cl
ParaCL/frontend/AST/: ast.cpp  ast.hpp
ParaCL/frontend/SemanticAnalyzer/: scopeTree.hpp  semantic.cpp  semantic.hpp
ParaCL/frontend/customLexer/: customLexer.cpp  customLexer.hpp
ParaCL/frontend/driver/: driver.cpp  driver.hpp
ParaCL/frontend/lexer/: paraCL.l
ParaCL/frontend/parser/: grammar.y
VulkanTest/: CMakeLists.txt  Makefile  main.cpp
VulkanTest/headers/: vulkan.hpp
VulkanTest/sources/: main.cpp  vulkan.cpp
VulkanTest/vulkan/shaders/: compile.sh  frag.spv  shader.vert
beladi_cache/: CMakeLists.txt  README.md  beladi.hpp  main.cpp
cache_frolov/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  tests.gay
cache_frolov/tests/: README.md  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test8.txt  test9.txt
cache_frolov_2_0/: .gitignore  CMakeLists.txt  Makefile  README.md  cache.hpp  main.cpp  runTests  unitTests.cpp
matrices_together/: main.cpp
matrices_together/include/: matrix.hpp
matrix/: CMakeLists.txt  README.md
matrix/ExternalLibs/gTest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
matrix/ExternalLibs/gTest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
matrix/ExternalLibs/gTest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
matrix/include/: common.hpp  matrix.hpp
matrix/sources/: common.cpp  main.cpp  matrix.cpp  test.cpp  unitTests.cpp
matrix/tests/: answ2  answ3  test1  test2  test3  test4  test5
tree_together/: .clang-format  .gitignore  CMakeLists.txt  README.md  drawTree  test.c
tree_together/ExternalLibs/gTest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tree_together/ExternalLibs/gTest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tree_together/ExternalLibs/gTest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tree_together/include/: tree.hpp
tree_together/lvl_1/: CMakeLists.txt
tree_together/lvl_1/ExternalLibs/gTest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tree_together/lvl_1/ExternalLibs/gTest/googlemock/: CTestTestfile.cmake  cmake_install.cmake
tree_together/lvl_1/ExternalLibs/gTest/googletest/: cmake_install.cmake
tree_together/lvl_1/dumpscript/: treeDump
tree_together/lvl_1/include/: tree.hpp
tree_together/lvl_1/sources/: tree.cpp
tree_together/lvl_1/tests/: 3.txt  answ1.txt  answ3.txt
tree_together/lvl_2/: .clang-format  CMakeLists.txt  generator.cpp  main.cpp  test1.txt
tree_together/lvl_2/generator/: generator.cpp
tree_together/lvl_2/include/: tree.hpp
tree_together/lvl_2/sources/: main.cpp  setTreeTest.cpp
tree_together/sources/: main.cpp  test.cpp  tree.cpp
tree_together/tests/: 2.txt  answ2.txt
triangles/: CMakeLists.txt  main.cpp  triangles.hpp
triangles_together/: CMakeLists.txt  README.md  main.cpp
triangles_together/include/: common.hpp  octotree.hpp  octree.hpp  triangle.hpp  vector.hpp  vulkan.hpp
triangles_together/source/: common.cpp  intersect.cpp  main.cpp  octotree.cpp  octree.cpp  triangle.cpp  vector.cpp  vulkan.cpp
triangles_together/tests/: README.md  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
triangles_together/tests/octreeTests/: degenerator.txt  test.txt  test1.txt  test2.txt  test4.txt
triangles_together/tests/octreeTests/answers/: answ1.txt  answ2.txt  answ3.txt  answ4.txt  answ5.txt
triangles_together/tests/octreeTests/tests/: test1.txt  test3.txt  test5.txt
triangles_together/tests/segXseg/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test7.txt  test8.txt
triangles_together/tests/segXseg/answers/: answ4.txt  answ8.txt
triangles_together/tests/trXseg/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
triangles_together/tests/trXseg/answers/: answ1.txt  answ10.txt
triangles_together/tests/trXtr/: 1.sh  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
triangles_together/vulkan/shaders/: CMakeLists.txt  compile.bat  compile.sh  shader.frag  shader.vert  vert.spv
